<resources>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="app_name">Harjoitustyo</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="username">Username</string>
    <string name="log_out">Log out</string>
    <string name="help">Help</string>
    <string name="view_data">View data</string>
    <string name="add_data">Add data</string>
    <string name="biowaste">Biowaste</string>
    <string name="carton">Carton</string>
    <string name="electronic">Electronic</string>
    <string name="glass">Glass</string>
    <string name="hazardous">Hazardous</string>
    <string name="metal">Metal</string>
    <string name="paper">Paper</string>
    <string name="plastic">Plastic</string>
    <string name="amount">Amount</string>
    <string name="waste_type">Waste type</string>
    <string name="frequency">Frequency</string>
    <string name="calculate">Calculate</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm password:</string>
    <string name="name">Name:</string>
    <string name="age">Age:</string>
    <string name="password">Password:</string>
    <string name="username2">Username:</string>
    <string name="sign_up2">Sign up</string>
    <string name="go_back">Go back</string>
    <string name="navigation_header">Navigation header</string>
    <string name="pie_chart">Pie Chart</string>
    <string name="bar_chart">Bar Chart</string>
    <string name="radar_chart">Radar Chart</string>
    <string name="add_data2">Add Data</string>
    <string name="for_each_waste_type_pick_the_option_that_best_describes_your_waste_sorting_after_submitting_options_you_can_calculate_your_co2_value_kg_year_after_adding_data_you_can_use_view_data">For each waste type, pick the option that best describes your waste sorting. After submitting options you can calculate your CO2 value (kg/year). After adding data you can use View Data.</string>
    <string name="view_data2">View Data</string>
    <string name="view_data_has_two_options_the_first_option_is_bar_chart_which_shows_evaluations_of_your_co2_values_kg_year_new_bar_will_be_added_every_time_you_add_data_the_second_option_is_pie_chart_which_shows_all_waste_types_and_how_often_they_are_sorted_remember_to_add_data_first">View Data has two options. The first option is Bar Chart which shows evaluations of your CO2 values (kg/year). New bar will be added every time you add data. The second option is Pie Chart which shows all waste types and how often they are sorted. Remember to add data first!</string>
    <string name="login">Login</string>
    <string name="password2">Password</string>
    <string name="bypass">Bypass</string>
    <string name="profile">Profile</string>
    <string name="in_total_people_have_used_this_app_x_times">In total people have used this app X times</string>
    <string name="you_have_used_this_app_x_times">you have used this app X times</string>
    <string name="thank_you_for_your_support">THANK YOU FOR YOUR SUPPORT</string>
    <string name="choose_your_birthday_to_confirm_your_age">Choose your birthday to confirm your age</string>
    <string name="show_log">Show Log</string>
    <string name="hide_log">Hide Log</string>
    <string name="please_rate_this_app">Please rate this app:</string>
    <string name="recycling_app">RECYCLING APP</string>
    <string-array name="Choice">
        <item>never</item>
        <item>sometimes</item>
        <item>often</item>
        <item>always</item>
    </string-array>
    <string-array name="Choice_amount">
        <item>low</item>
        <item>normal</item>
        <item>high</item>
    </string-array>
</resources>