<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home">
    </item>

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile">
    </item>

    <item
        android:id="@+id/nav_add_data"
        android:icon="@drawable/ic_add_data"
        android:title="@string/add_data">
    </item>

    <item
        android:id="@+id/nav_view_data"
        android:icon="@drawable/ic_view_data"
        android:title="@string/view_data">
    </item>

    <item
        android:id="@+id/nav_help"
        android:icon="@drawable/ic_help"
        android:title="@string/help">
    </item>

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/log_out">
    </item>

</menu>